i probably should not do it that way